# devtoy

./: README.md  mypy.ini  pyproject.toml  spelling.txt
src/devtoy/: apikey.py  client.py
tests/: test_apikey.py  test_devtoy.py
