[tool.poetry]
name = "devtoy"
version = "0.1.0"
description = ""
authors = ["Jonathan Bowman <git@bowmanjd.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pynvim = "^0.4.1"
ptpython = "^3.0.5"
pytest_httpx = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
