[tool.poetry]
name = "devtoy"
version = "0.1.0"
description = ""
authors = ["Jonathan Bowman <git@bowmanjd.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.2.1"}
darglint = "^1.5.2"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.2.3"
flake8-spellcheck = "^0.19.0"
flakehell = "^0.5.0"
isort = "^5.4.2"
jedi = "^0.17.2"
mypy = "^0.782"
pep8-naming = "^0.11.1"
ptpython = "^3.0.5"
pydocstyle = "^5.0.2"
pynvim = "^0.4.1"
pytest = "^6.0.1"
pytest_httpx = "^0.7.0"
safety = "^1.9.0"

[tool.poetry.scripts]
devtoy = "devtoy.client:cli"

[tool.flakehell]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 88
show_source = true
whitelist = "/home/jbowman/devel/devtoy/spelling.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.flakehell.exceptions."*test_*.py"]
flake8-bandit = ["+*", "-S101", "-S322"]
flake8-darglint = ["-*"]
flake8-docstrings = ["-*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.coverage.run]
concurrency = ["multiprocessing"]
command_line = "-m pytest"
parallel = true
source = ["src"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
